--- a/client/package.json
+++ b/client/package.json
@@ -67,13 +67,13 @@
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
+  "proxy": "http://localhost:8080/api",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
-  "proxy": "http://localhost:3001",
-  
+
   "eslintConfig": {
     "extends": "react-app"
   },
